ingress-root.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rshiny-demo-app-root-ingress
  namespace: rshiny-demo-app
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rshiny-demo-app
            port:
              number: 3838
