ingress-subpath.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: rshiny-demo-app
spec:
  stripPrefix:
    prefixes:
      - /rshiny-demo-app
    forceSlash: false
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: addslashbyredirect
  namespace: rshiny-demo-app
spec:
  redirectRegex:
    regex: ^([htps]+)://([^/]+)/([^/]+)$
    replacement: $1://$2/$3/
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rshiny-demo-app-subpath-ingress
  namespace: rshiny-demo-app
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: rshiny-demo-app-addslashbyredirect@kubernetescrd, rshiny-demo-app-stripprefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /rshiny-demo-app
        pathType: Prefix
        backend:
          service:
            name: rshiny-demo-app
            port:
              number: 3838
